Style: Fixed weird layout bug All:Unset was causing

--- a/src/main.css
+++ b/src/main.css
@@ -3,28 +3,34 @@
 @tailwind utilities;
 
 :root {
-  all:unset;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 500; 
+  margin: 0;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  min-height: 100vh;
 }
 
 #root {
   min-width: 100vw;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 100vw;
-  min-height: 100vh;
-}
-
 .themeToggleBtn {
   transition: 1s ease all;
   user-select: none;
+}
+
+.themeToggleBtn.light:hover {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.themeToggleBtn.dark:hover {
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 .themeToggleBtn span {
